// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`replica_identity.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "test_replica_identity",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "id",
                "constraints": [
                  {
                    "Constraint": {
                      "contype": "CONSTR_PRIMARY",
                      "location": 54,
                    },
                  },
                ],
                "is_local": true,
                "location": 44,
                "typeName": {
                  "location": 47,
                  "names": [
                    {
                      "String": {
                        "sval": "serial",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "keya",
                "constraints": [
                  {
                    "Constraint": {
                      "contype": "CONSTR_NOTNULL",
                      "location": 84,
                    },
                  },
                ],
                "is_local": true,
                "location": 74,
                "typeName": {
                  "location": 79,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "keyb",
                "constraints": [
                  {
                    "Constraint": {
                      "contype": "CONSTR_NOTNULL",
                      "location": 111,
                    },
                  },
                ],
                "is_local": true,
                "location": 101,
                "typeName": {
                  "location": 106,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "nonkey",
                "is_local": true,
                "location": 128,
                "typeName": {
                  "location": 135,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "Constraint": {
                "conname": "test_replica_identity_unique_defer",
                "contype": "CONSTR_UNIQUE",
                "deferrable": true,
                "keys": [
                  {
                    "String": {
                      "sval": "keya",
                    },
                  },
                  {
                    "String": {
                      "sval": "keyb",
                    },
                  },
                ],
                "location": 148,
              },
            },
            {
              "Constraint": {
                "conname": "test_replica_identity_unique_nondefer",
                "contype": "CONSTR_UNIQUE",
                "keys": [
                  {
                    "String": {
                      "sval": "keya",
                    },
                  },
                  {
                    "String": {
                      "sval": "keyb",
                    },
                  },
                ],
                "location": 233,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 9 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 15,
            "relname": "test_replica_identity_othertable",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "id",
                "constraints": [
                  {
                    "Constraint": {
                      "contype": "CONSTR_PRIMARY",
                      "location": 59,
                    },
                  },
                ],
                "is_local": true,
                "location": 49,
                "typeName": {
                  "location": 52,
                  "names": [
                    {
                      "String": {
                        "sval": "serial",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 11 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "btree",
          "idxname": "test_replica_identity_keyab",
          "indexParams": [
            {
              "IndexElem": {
                "name": "keya",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
            {
              "IndexElem": {
                "name": "keyb",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 46,
            "relname": "test_replica_identity",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 13 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "btree",
          "idxname": "test_replica_identity_keyab_key",
          "indexParams": [
            {
              "IndexElem": {
                "name": "keya",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
            {
              "IndexElem": {
                "name": "keyb",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 56,
            "relname": "test_replica_identity",
            "relpersistence": "p",
          },
          "unique": true,
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 14 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "btree",
          "idxname": "test_replica_identity_nonkey",
          "indexParams": [
            {
              "IndexElem": {
                "name": "keya",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
            {
              "IndexElem": {
                "name": "nonkey",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 53,
            "relname": "test_replica_identity",
            "relpersistence": "p",
          },
          "unique": true,
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 15 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "hash",
          "idxname": "test_replica_identity_hash",
          "indexParams": [
            {
              "IndexElem": {
                "name": "nonkey",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 44,
            "relname": "test_replica_identity",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 16 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "btree",
          "idxname": "test_replica_identity_expr",
          "indexParams": [
            {
              "IndexElem": {
                "name": "keya",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
            {
              "IndexElem": {
                "name": "keyb",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
            {
              "IndexElem": {
                "expr": {
                  "A_Const": {
                    "ival": {
                      "ival": 3,
                    },
                    "location": 87,
                  },
                },
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 51,
            "relname": "test_replica_identity",
            "relpersistence": "p",
          },
          "unique": true,
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 17 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "btree",
          "idxname": "test_replica_identity_partial",
          "indexParams": [
            {
              "IndexElem": {
                "name": "keya",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
            {
              "IndexElem": {
                "name": "keyb",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 54,
            "relname": "test_replica_identity",
            "relpersistence": "p",
          },
          "unique": true,
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "keyb",
                      },
                    },
                  ],
                  "location": 95,
                },
              },
              "location": 100,
              "name": [
                {
                  "String": {
                    "sval": "<>",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 103,
                  "sval": {
                    "sval": "3",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 18 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 77,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 59,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "relreplident",
                        },
                      },
                    ],
                    "location": 59,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "location": 92,
                },
              },
              "location": 96,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 98,
                      "sval": {
                        "sval": "test_replica_identity",
                      },
                    },
                  },
                  "location": 121,
                  "typeName": {
                    "location": 123,
                    "names": [
                      {
                        "String": {
                          "sval": "regclass",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 21 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 58,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 40,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "relreplident",
                        },
                      },
                    ],
                    "location": 40,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "location": 73,
                },
              },
              "location": 77,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 79,
                      "sval": {
                        "sval": "pg_class",
                      },
                    },
                  },
                  "location": 89,
                  "typeName": {
                    "location": 91,
                    "names": [
                      {
                        "String": {
                          "sval": "regclass",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 23 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 26,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "relreplident",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "location": 41,
                },
              },
              "location": 45,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 47,
                      "sval": {
                        "sval": "pg_constraint",
                      },
                    },
                  },
                  "location": 62,
                  "typeName": {
                    "location": 64,
                    "names": [
                      {
                        "String": {
                          "sval": "regclass",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 24 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "ReplicaIdentityStmt": {
                    "identity_type": "i",
                    "name": "test_replica_identity_keyab",
                  },
                },
                "subtype": "AT_ReplicaIdentity",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 87,
            "relname": "test_replica_identity",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 31 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "ReplicaIdentityStmt": {
                    "identity_type": "i",
                    "name": "test_replica_identity_nonkey",
                  },
                },
                "subtype": "AT_ReplicaIdentity",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 59,
            "relname": "test_replica_identity",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 33 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "ReplicaIdentityStmt": {
                    "identity_type": "i",
                    "name": "test_replica_identity_hash",
                  },
                },
                "subtype": "AT_ReplicaIdentity",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 56,
            "relname": "test_replica_identity",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 35 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "ReplicaIdentityStmt": {
                    "identity_type": "i",
                    "name": "test_replica_identity_expr",
                  },
                },
                "subtype": "AT_ReplicaIdentity",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 39,
            "relname": "test_replica_identity",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 37 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "ReplicaIdentityStmt": {
                    "identity_type": "i",
                    "name": "test_replica_identity_partial",
                  },
                },
                "subtype": "AT_ReplicaIdentity",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 36,
            "relname": "test_replica_identity",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 39 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "ReplicaIdentityStmt": {
                    "identity_type": "i",
                    "name": "test_replica_identity_othertable_pkey",
                  },
                },
                "subtype": "AT_ReplicaIdentity",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 36,
            "relname": "test_replica_identity",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 41 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "ReplicaIdentityStmt": {
                    "identity_type": "i",
                    "name": "test_replica_identity_unique_defer",
                  },
                },
                "subtype": "AT_ReplicaIdentity",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 33,
            "relname": "test_replica_identity",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 43 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 27,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "relreplident",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "location": 42,
                },
              },
              "location": 46,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 48,
                      "sval": {
                        "sval": "test_replica_identity",
                      },
                    },
                  },
                  "location": 71,
                  "typeName": {
                    "location": 73,
                    "names": [
                      {
                        "String": {
                          "sval": "regclass",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 45 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "ReplicaIdentityStmt": {
                    "identity_type": "i",
                    "name": "test_replica_identity_pkey",
                  },
                },
                "subtype": "AT_ReplicaIdentity",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 82,
            "relname": "test_replica_identity",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 52 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 26,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "relreplident",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "location": 41,
                },
              },
              "location": 45,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 47,
                      "sval": {
                        "sval": "test_replica_identity",
                      },
                    },
                  },
                  "location": 70,
                  "typeName": {
                    "location": 72,
                    "names": [
                      {
                        "String": {
                          "sval": "regclass",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 53 1`] = `[Error: syntax error at or near "\\"]`;

exports[`replica_identity.sql > line 57 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "ReplicaIdentityStmt": {
                    "identity_type": "i",
                    "name": "test_replica_identity_keyab_key",
                  },
                },
                "subtype": "AT_ReplicaIdentity",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 60,
            "relname": "test_replica_identity",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 60 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "ReplicaIdentityStmt": {
                    "identity_type": "i",
                    "name": "test_replica_identity_keyab_key",
                  },
                },
                "subtype": "AT_ReplicaIdentity",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "test_replica_identity",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 61 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 26,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "relreplident",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "location": 41,
                },
              },
              "location": 45,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 47,
                      "sval": {
                        "sval": "test_replica_identity",
                      },
                    },
                  },
                  "location": 70,
                  "typeName": {
                    "location": 72,
                    "names": [
                      {
                        "String": {
                          "sval": "regclass",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 62 1`] = `[Error: syntax error at or near "\\"]`;

exports[`replica_identity.sql > line 64 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "ReplicaIdentityStmt": {
                    "identity_type": "d",
                  },
                },
                "subtype": "AT_ReplicaIdentity",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 58,
            "relname": "test_replica_identity",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 69 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 26,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "relreplident",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "location": 41,
                },
              },
              "location": 45,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 47,
                      "sval": {
                        "sval": "test_replica_identity",
                      },
                    },
                  },
                  "location": 70,
                  "typeName": {
                    "location": 72,
                    "names": [
                      {
                        "String": {
                          "sval": "regclass",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 70 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 22,
                "relname": "pg_index",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "BoolExpr": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "indrelid",
                            },
                          },
                        ],
                        "location": 37,
                      },
                    },
                    "location": 46,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 48,
                            "sval": {
                              "sval": "test_replica_identity",
                            },
                          },
                        },
                        "location": 71,
                        "typeName": {
                          "location": 73,
                          "names": [
                            {
                              "String": {
                                "sval": "regclass",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
                {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "indisreplident",
                        },
                      },
                    ],
                    "location": 86,
                  },
                },
              ],
              "boolop": "AND_EXPR",
              "location": 82,
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 71 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "ReplicaIdentityStmt": {
                    "identity_type": "f",
                  },
                },
                "subtype": "AT_ReplicaIdentity",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "test_replica_identity",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 73 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 26,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "relreplident",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "location": 41,
                },
              },
              "location": 45,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 47,
                      "sval": {
                        "sval": "test_replica_identity",
                      },
                    },
                  },
                  "location": 70,
                  "typeName": {
                    "location": 72,
                    "names": [
                      {
                        "String": {
                          "sval": "regclass",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 74 1`] = `[Error: syntax error at or near "\\"]`;

exports[`replica_identity.sql > line 76 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 26,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "relreplident",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "location": 41,
                },
              },
              "location": 45,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 47,
                      "sval": {
                        "sval": "test_replica_identity",
                      },
                    },
                  },
                  "location": 70,
                  "typeName": {
                    "location": 72,
                    "names": [
                      {
                        "String": {
                          "sval": "regclass",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 77 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 117,
            "relname": "test_replica_identity2",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "id",
                "constraints": [
                  {
                    "Constraint": {
                      "contype": "CONSTR_UNIQUE",
                      "location": 148,
                    },
                  },
                  {
                    "Constraint": {
                      "contype": "CONSTR_NOTNULL",
                      "location": 155,
                    },
                  },
                ],
                "is_local": true,
                "location": 141,
                "typeName": {
                  "location": 144,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 84 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "ReplicaIdentityStmt": {
                    "identity_type": "i",
                    "name": "test_replica_identity2_id_key",
                  },
                },
                "subtype": "AT_ReplicaIdentity",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "test_replica_identity2",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 85 1`] = `[Error: syntax error at or near "\\"]`;

exports[`replica_identity.sql > line 87 1`] = `[Error: syntax error at or near "\\"]`;

exports[`replica_identity.sql > line 91 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "btree",
          "idxname": "test_replica_identity3_id_key",
          "indexParams": [
            {
              "IndexElem": {
                "name": "id",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 54,
            "relname": "test_replica_identity3",
            "relpersistence": "p",
          },
          "unique": true,
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 92 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "ReplicaIdentityStmt": {
                    "identity_type": "i",
                    "name": "test_replica_identity3_id_key",
                  },
                },
                "subtype": "AT_ReplicaIdentity",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "test_replica_identity3",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 93 1`] = `[Error: syntax error at or near "\\"]`;

exports[`replica_identity.sql > line 95 1`] = `[Error: syntax error at or near "\\"]`;

exports[`replica_identity.sql > line 100 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "partspec": {
            "location": 212,
            "partParams": [
              {
                "PartitionElem": {
                  "location": 231,
                  "name": "id",
                },
              },
            ],
            "strategy": "PARTITION_STRATEGY_LIST",
          },
          "relation": {
            "inh": true,
            "location": 168,
            "relname": "test_replica_identity4",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "id",
                "constraints": [
                  {
                    "Constraint": {
                      "contype": "CONSTR_NOTNULL",
                      "location": 202,
                    },
                  },
                ],
                "is_local": true,
                "location": 191,
                "typeName": {
                  "location": 194,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 106 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "test_replica_identity4_1",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "id",
                "constraints": [
                  {
                    "Constraint": {
                      "contype": "CONSTR_NOTNULL",
                      "location": 50,
                    },
                  },
                ],
                "is_local": true,
                "location": 39,
                "typeName": {
                  "location": 42,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 107 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "PartitionCmd": {
                    "bound": {
                      "listdatums": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 100,
                          },
                        },
                      ],
                      "location": 96,
                      "strategy": "l",
                    },
                    "name": {
                      "inh": true,
                      "location": 60,
                      "relname": "test_replica_identity4_1",
                      "relpersistence": "p",
                    },
                  },
                },
                "subtype": "AT_AttachPartition",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "location": 18,
            "relname": "test_replica_identity4",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 109 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "Constraint": {
                    "conname": "test_replica_identity4_pkey",
                    "contype": "CONSTR_PRIMARY",
                    "keys": [
                      {
                        "String": {
                          "sval": "id",
                        },
                      },
                    ],
                    "location": 47,
                  },
                },
                "subtype": "AT_AddConstraint",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "location": 18,
            "relname": "test_replica_identity4",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 111 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "ReplicaIdentityStmt": {
                    "identity_type": "i",
                    "name": "test_replica_identity4_pkey",
                  },
                },
                "subtype": "AT_ReplicaIdentity",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "location": 18,
            "relname": "test_replica_identity4",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 113 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "Constraint": {
                    "conname": "test_replica_identity4_1_pkey",
                    "contype": "CONSTR_PRIMARY",
                    "keys": [
                      {
                        "String": {
                          "sval": "id",
                        },
                      },
                    ],
                    "location": 49,
                  },
                },
                "subtype": "AT_AddConstraint",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "location": 18,
            "relname": "test_replica_identity4_1",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 115 1`] = `[Error: syntax error at or near "\\"]`;

exports[`replica_identity.sql > line 118 1`] = `[Error: syntax error at or near "\\"]`;

exports[`replica_identity.sql > line 121 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "test_replica_identity2",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 122 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "test_replica_identity3",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 123 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "test_replica_identity4",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`replica_identity.sql > line 124 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "test_replica_identity_othertable",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;
